# tree-sitter-q

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-qter-q.pc.in
bindings/c/tree_sitter/: tree-sitter-qter-q.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qter_q/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQterQTests/: TreeSitterQterQTests.swift
queries/: highlights-helix.scm  highlights.scm
queries/helix/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: algorithm_instructions.txt  comments.txt  goto_instructions.txt  halt_instruction.txt  input_instructions.txt  multiply.txt  print_instruction.txt  puzzle_definitions.txt  repeat_until_instruction.txt  solve_instruction.txt  solved_goto_instructions.txt  switch_instruction.txt
