[package]
name = "tree-sitter-qter-q"
description = "Q, qter's instruction format"
version = "0.0.0"
authors = ["Kian Kasad <kian@kasad.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "qter-q"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/qter-project/tree-sitter-q"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
