[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-qter-q"
description = "Q, qter's instruction format"
version = "0.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "qter-q"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kian Kasad", email = "kian@kasad.com" }]
requires-python = ">=3.10"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/qter-project/tree-sitter-q"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
